女王節活動頁內容更新與新增
1.首頁更新
2.子頁面 date-02.html 內容調整
2.新增 date-03.html & date-04.html

--- a/iiot/taoyuang1000/queen/date-04.html
+++ b/iiot/taoyuang1000/queen/date-04.html
@@ -3,11 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no">
-    <title>【Global Mall 環球購物中心 桃園A19】 桃園市民卡－卡好女王節</title>
+    <title>【遠東百貨桃園店】 桃園市民卡－卡好女王節</title>
     <meta name='description'content="歡慶母親節，桃園市民卡結合三大支付工具推出「消費滿千送百」超值回饋，活動期間至官方LINE帳號註冊、登錄，即有機會抽中回饋名額。卡好女王節就是要讓你買得優惠、買得愉快，做自已的女王，盡情寵愛自己！" />
     <meta name='keywords' content="數位桃園, 數位振興, 聯合台灣大車隊,桃園市民, TTPUSH,乘車套票, 抽獎" />
     <meta property="og:image" content="images/share-pic-queen.jpg" />
-    <meta property="og:title" content="【Global Mall 環球購物中心 桃園A19】 桃園市民卡－卡好女王節" />
+    <meta property="og:title" content="【遠東百貨桃園店】 桃園市民卡－卡好女王節" />
     <meta property="og:url" content="https://taoyuan1000.tycg.gov.tw" />
     <meta property="og:description" content="歡慶母親節，桃園市民卡結合三大支付工具推出「消費滿千送百」超值回饋，活動期間至官方LINE帳號註冊、登錄，即有機會抽中回饋名額。卡好女王節就是要讓你買得優惠、買得愉快，做自已的女王，盡情寵愛自己！" />
     <meta property="og:type" content="website" />
@@ -103,14 +103,14 @@
                     <div class="card">
                          <div class="main-introductio">
                             <h3 class="sub-title">
-                                <span class="bg-pink">Global Mall<br>環球購物中心 桃園A19</span>
+                                <span class="bg-pink">遠東百貨桃園店</span>
                             </h3>
                             <div class="info">
                                 <br>
                                 <h5>活動時間</h5>
-                                <p>111/4/25（一）- 5/8（日）</p>
+                                <p>111/5/9（一）－5/22（日）</p>
                                 <h5>活動地點</h5>
-                                <p>桃園市中壢區高鐵南路二段352號</p>
+                                <p>330桃園市桃園區中正路20號</p>
                                 <h5>活動辦法&獎項</h5>
                             </div>
                         </div>
@@ -126,7 +126,7 @@
                                             <p>於<a href="https://liff.line.me/1645278921-kWRPP32q/?accountId=497jygbl" target="_blank">桃園市民卡LINE官方帳號</a>完成註冊。</p>
                                         </li>
                                         <li>
-                                            <p>2F 服務台出示當日消費滿2,000元發票（當日累計，全館開立環球發票/非環球發票品牌皆適用）及市民卡 LINE「註冊/登錄」頁面 即可掃描現場 QRCODE 領取百貨禮券200元（限量200份，每人於期間內限兌換一份，送完為止）。</p>
+                                            <p>11F 客服中心出示當日消費滿2,000元發票（當日累積）及市民卡LINE「註冊/登錄」頁面 即可掃描現場 QRCODE 領取百貨禮券200元（限量200份，每人限兌換一份，送完為止）。</p>
                                         </li>
                                     </ul>
                                     <p class="text-remark">※ 兌換按鈕請交由工作人員進行點選，請勿自行操作，以免喪失權益。</p>
@@ -137,7 +137,7 @@
                                             <p>於<a href="https://liff.line.me/1645278921-kWRPP32q/?accountId=497jygbl" target="_blank">桃園市民卡LINE官方帳號</a>完成註冊。</p>
                                         </li>
                                         <li>
-                                            <p>2F 服務台出示桃園市民卡 LINE 官方帳號「註冊/登錄」頁面及手機APP環球會員卡，即可掃描現場 QRCODE 兌換電子商品禮券100元（限量300份，每人於期間內限兌換一份，送完為止；電子商品禮券於指定品牌單筆滿1,000元可折抵，詳見券上說明）。</p>
+                                            <p>服務台出示桃園市民卡LINE官方帳號「註冊/登錄」頁面及館內當日不限額發票，即可掃描現場 QRCODE 折抵地下停車場停車一小時（限汽車，每人限兌換一份）。</p>
                                         </li>
                                     </ul>
                                     <p class="text-remark">※ 兌換按鈕請交由工作人員進行點選，請勿自行操作，以免喪失權益。</p>
@@ -157,7 +157,7 @@
                                                     target="_blank">桃園市民卡LINE官方帳號</a>完成註冊。</p>
                                         </li>
                                         <li>
-                                            <p>2F服務台出示當日消費滿2,000元發票（當日累計，全館開立環球發票/非環球發票品牌皆適用）及市民卡LINE「註冊/登錄」頁面 即可掃描現場 QRCODE 領取百貨禮券200元（限量200份，每人於期間內限兌換一份，送完為止）。</p>
+                                            <p>11F 客服中心出示當日消費滿2,000元發票（當日累積）及市民卡LINE「註冊/登錄」頁面 即可掃描現場 QRCODE 領取百貨禮券200元（限量200份，每人限兌換一份，送完為止）。</p>
                                         </li>
                                     </ul>
                                     <p class="text-remark">※ 兌換按鈕請交由工作人員進行點選，請勿自行操作，以免喪失權益。</p>
@@ -174,7 +174,7 @@
                                                     target="_blank">桃園市民卡LINE官方帳號</a>完成註冊。</p>
                                         </li>
                                         <li>
-                                            <p>2F 服務台出示桃園市民卡 LINE 官方帳號「註冊/登錄」頁面及手機APP環球會員卡，即可掃描現場 QRCODE 兌換電子商品禮券100元（限量300份，每人於期間內限兌換一份，送完為止；電子商品禮券於指定品牌單筆滿1,000元可折抵，詳見券上說明）。</p>
+                                            <p>服務台出示桃園市民卡LINE官方帳號「註冊/登錄」頁面及館內當日不限額發票，即可掃描現場 QRCODE 折抵地下停車場停車一小時（限汽車，每人限兌換一份）。</p>
                                         </li>
                                     </ul>
                                     <p class="text-remark">※ 兌換按鈕請交由工作人員進行點選，請勿自行操作，以免喪失權益。</p>
@@ -190,243 +190,78 @@
                             <ul class="store-logo clearfix">
                                 <li>
                                     <div class="img">
-                                        <img src="images/store/logo-18.jpg" alt="優廚">
+                                        <img src="images/store/logo-48.png" alt="翰林茶館">
                                     </div>
                                 </li>
                                 <li>
                                     <div class="img">
-                                        <img src="images/store/logo-19.jpg" alt="麗聲時計">
+                                        <img src="images/store/logo-49.png" alt="大戶屋日式料理">
                                     </div>
                                 </li>
                                 <li>
                                     <div class="img">
-                                        <img src="images/store/logo-11.jpg" alt="JINS">
+                                        <img src="images/store/logo-50.png" alt="香草工坊香茅火鍋">
                                     </div>
                                 </li>
                                 <li>
                                     <div class="img">
-                                        <img src="images/store/logo-20.jpg" alt="詩肯柚木">
+                                        <img src="images/store/logo-51.png" alt="開飯川食堂">
                                     </div>
                                 </li>
                                 <li>
                                     <div class="img">
-                                        <img src="images/store/logo-21.jpg" alt="Lucy's Mountain">
+                                        <img src="images/store/logo-52.png" alt="古拉爵-義式屋">
                                     </div>
                                 </li>
                                 <li>
                                     <div class="img">
-                                        <img src="images/store/logo-22.png" alt="Hang Ten">
+                                        <img src="images/store/logo-55.png" alt="大河屋">
                                     </div>
                                 </li>
                                 <li>
                                     <div class="img">
-                                        <img src="images/store/logo-23.jpg" alt="adidas kids">
+                                        <img src="images/store/logo-56.png" alt="點８號">
                                     </div>
                                 </li>
                                 <li>
                                     <div class="img">
-                                        <img src="images/store/logo-24.png" alt="6IXTY8IGHT">
+                                        <img src="images/store/logo-54.png" alt="牛角">
                                     </div>
                                 </li>
                                 <li>
                                     <div class="img">
-                                        <img src="images/store/logo-25.jpg" alt="SKECHERS">
-                                    </div>
-                                </li>
-                                <li>
-                                    <div class="img">
-                                        <img src="images/store/logo-26.png" alt="New Balance">
-                                    </div>
-                                </li>
-                                <li>
-                                    <div class="img">
-                                        <img src="images/store/logo-27.jpg" alt="瑪登瑪朵">
-                                    </div>
-                                </li>
-                                <li>
-                                    <div class="img">
-                                        <img src="images/store/logo-28.jpg" alt="衫隆">
-                                    </div>
-                                </li>
-                                <li>
-                                    <div class="img">
-                                        <img src="images/store/logo-29.jpg" alt="PALLADIUM">
-                                    </div>
-                                </li>
-                                <li>
-                                    <div class="img">
-                                        <img src="images/store/logo-30.png" alt="日春木瓜牛奶">
-                                    </div>
-                                </li>
-                                <li>
-                                    <div class="img">
-                                        <img src="images/store/logo-31.jpg" alt="鹿角巷">
-                                    </div>
-                                </li>
-                                <li>
-                                    <div class="img">
-                                        <img src="images/store/logo-32.png" alt="島瓜">
-                                    </div>
-                                </li>
-                                <li>
-                                    <div class="img">
-                                        <img src="images/store/logo-33.png" alt="總裁牛肉麵">
-                                    </div>
-                                </li>
-                                <li>
-                                    <div class="img">
-                                        <img src="images/store/logo-34.jpg" alt="初虎韓式小食堂">
-                                    </div>
-                                </li>
-                                <li>
-                                    <div class="img">
-                                        <img src="images/store/logo-35.png" alt="Avivi"> 
-                                    </div>
-                                </li>
-                                <li>
-                                    <div class="img">
-                                        <img src="images/store/logo-37.jpg" alt="adidas originals">
-                                    </div>
-                                </li>
-                                <li>
-                                    <div class="img">
-                                        <img src="images/store/logo-38.jpg" alt="原岩攀岩館">
-                                    </div>
-                                </li>
-                                <li>
-                                    <div class="img">
-                                        <img src="images/store/logo-39.jpg" alt="Hanako goods">
-                                    </div>
-                                </li>
-                                <li>
-                                    <div class="img">
-                                        <img src="images/store/logo-40.png" alt="米特才藝中心">
-                                    </div>
-                                </li>
-                                <li>
-                                    <div class="img">
-                                        <img src="images/store/logo-41.png" alt="Funbox Toys">
-                                    </div>
-                                </li>
-                                <li>
-                                    <div class="img">
-                                        <img src="images/store/logo-07-1.jpg" alt="TOY WORLD">
-                                    </div>
-                                </li>
-                                <li>
-                                    <div class="img">
-                                        <img src="images/store/logo-43-1.jpg" alt="Crocs">
-                                    </div>
-                                </li>
-                                <li>
-                                    <div class="img">
-                                        <img src="images/store/logo-44.jpg" alt="星悅新加坡料理">
-                                    </div>
-                                </li>
-                                <li>
-                                    <div class="img">
-                                        <img src="images/store/logo-45.jpg" alt="創盛號">
-                                    </div>
-                                </li>
-                                <li>
-                                    <div class="img">
-                                        <img src="images/store/logo-46.jpg" alt="秋風軒mini">
-                                    </div>
-                                </li>
-                                <li>
-                                    <div class="img">
-                                        <img src="images/store/logo-47.jpg" alt="樂天桃猿">
+                                        <img src="images/store/logo-53.png" alt="米塔牛排">
                                     </div>
                                 </li>
                             </ul>
-                            <p>2022/6/30前至旗下品牌出示桃園市民卡卡片或LINE官方帳號「註冊/登錄」頁面，即享下列優惠：</p>
+                            <p>2022/12/31前至旗下品牌出示桃園市民卡卡片或LINE官方帳號「註冊/登錄」頁面，即享下列優惠：</p>
                             <ul class="list">
                                 <li>
-                                    <p>2F 優廚－憑桃園市市民卡消費享9折。</p>
+                                    <p>翰林茶館－內用點任兩份套餐，出示市民卡LINE即贈黃金炸薯條乙份。</p>
                                 </li>
                                 <li>
-                                    <p>2F 麗聲時計－憑桃園市市民卡消費享9折。</p>
+                                    <p>大戶屋日式料理－內用點選任一主餐，出示市民卡LINE即贈冰紅茶或冰檸檬紅茶乙杯。</p>
                                 </li>
                                 <li>
-                                    <p>2F JINS－憑桃園市市民卡消費享9折。</p>
+                                    <p>香草工坊香茅火鍋－內用出示市民卡LINE，單點去骨雞腿特價99元優惠（一桌乙份）。</p>
                                 </li>
                                 <li>
-                                    <p>2F 詩肯柚木－憑桃園市市民卡消費享9折。</p>
+                                    <p>開飯川食堂－平日出示市民卡LINE，招待精選菜色乙份。</p>
                                 </li>
                                 <li>
-                                    <p>2F Lucy's Mountain－憑桃園市市民卡消費享9折。</p>
+                                    <p>古拉爵-義式屋－內用出示市民卡LINE享95折優惠。</p>
                                 </li>
                                 <li>
-                                    <p>3F Hang Ten－憑桃園市市民卡消費享9折。</p>
+                                    <p>大河屋－內用出示市民卡LINE享95折優惠。</p>
                                 </li>
                                 <li>
-                                    <p>3F adidas kids－憑桃園市市民卡消費享9折。</p>
+                                    <p>點８號－內用點選任一主餐，出示市民卡LINE即贈爆檸鮮冰茶乙杯。</p>
                                 </li>
                                 <li>
-                                    <p>3F 6IXTY8IGHT－憑桃園市市民卡消費享9折。</p>
+                                    <p>牛角－平日內用出示市民卡LINE享95折優惠。</p>
                                 </li>
                                 <li>
-                                    <p>3F SKECHERS + New Balance－憑桃園市市民卡消費享9折。</p>
-                                </li>
-                                <li>
-                                    <p>3F 瑪登瑪朵－憑桃園市市民卡消費享9折。</p>
-                                </li>
-                                <li>
-                                    <p>3F 衫隆－憑桃園市市民卡消費享9折。</p>
-                                </li>
-                                <li>
-                                    <p>3F PALLADIUM－憑桃園市市民卡消費享9折。</p>
-                                </li>
-                                <li>
-                                    <p>3F 日春木瓜牛奶－憑桃園市市民卡消費享9折。</p>
-                                </li>
-                                <li>
-                                    <p>3F 鹿角巷－憑桃園市市民卡消費享9折。</p>
-                                </li>
-                                <li>
-                                    <p>3F 島瓜－憑桃園市市民卡消費享9折。</p>
-                                </li>
-                                <li>
-                                    <p>3F 總裁牛肉麵－憑桃園市市民卡消費享9折。</p>
-                                </li>
-                                <li>
-                                    <p>3F 初虎韓式料理－憑桃園市市民卡消費享9折。</p>
-                                </li>
-                                <li>
-                                    <p>3F Avivi 複合店－憑桃園市市民卡消費享9折。</p>
-                                </li>
-                                <li>
-                                    <p>3F adidas + adidas originals－憑桃園市市民卡消費享9折。</p>
-                                </li>
-                                <li>
-                                    <p>4F 原岩攀岩館－憑桃園市市民卡消費享9折。</p>
-                                </li>
-                                <li>
-                                    <p>4F Hanako goods－憑桃園市市民卡消費享9折。</p>
-                                </li>
-                                <li>
-                                    <p>4F 米特才藝中心－憑桃園市市民卡消費享9折。</p>
-                                </li>
-                                <li>
-                                    <p>4F Funbox Toys－憑桃園市市民卡消費享9折。</p>
-                                </li>
-                                <li>
-                                    <p>4F TOY WORLD－憑桃園市市民卡消費享9折。</p>
-                                </li>
-                                <li>
-                                    <p>3F Crocs－憑桃園市市民卡消費享95折。</p>
-                                </li>
-                                <li>
-                                    <p>3F 星悅新加坡料理－憑桃園市市民卡消費享95折。</p>
-                                </li>
-                                <li>
-                                    <p>3F 創盛號－憑桃園市市民卡消費享95折。</p>
-                                </li>
-                                <li>
-                                    <p>3F 秋風軒mini－憑桃園市市民卡消費享95折。</p>
-                                </li>
-                                <li>
-                                    <p>4F 樂天桃猿－憑桃園市市民卡消費享95折。</p>
+                                    <p>米塔牛排－出示市民卡LINE兩人同行內用滿低消238元即贈凱薩燻雞沙拉乙份。</p>
                                 </li>
                             </ul>
                             <h5>注意事項</h5>
@@ -443,7 +278,7 @@
                                     <p>為配合政府防疫政策，疫情期間若餐飲業無法提供內用時優惠將不適用。</p>
                                 </li>
                                 <li>
-                                    <p>Gloal Mall桃園A19保有活動事項保留異動及最終解釋權。</p>
+                                    <p>遠東百貨桃園店保有活動事項保留異動及最終解釋權。</p>
                                 </li>
                             </ul>
                         </div>
