--- a/iiot/taoyuang1000/queen/index.html
+++ b/iiot/taoyuang1000/queen/index.html
@@ -184,10 +184,10 @@
                                 <p>Global Mall 環球購物中心 A19</p>
                             </li>
                             <li>
-                                <a class="store-photo" target="_blank">
+                                <a class="store-photo" href="date-03.html" target="_blank">
                                     <img src="images/img_store_03.png" alt="Global Mall環球購物中心A8">
                                 </a>
-                                <p>comming soon...</p>
+                                <p>Global Mall 環球購物中心 A8</p>
                             </li>
                             <li>
                                 <a class="store-photo" target="_blank">
