女王節活動頁~更新A8內容(date-03.html)

--- a/iiot/taoyuang1000/queen/date-03.html
+++ b/iiot/taoyuang1000/queen/date-03.html
@@ -137,7 +137,7 @@
                                             <p>於<a href="https://liff.line.me/1645278921-kWRPP32q/?accountId=497jygbl" target="_blank">桃園市民卡LINE官方帳號</a>完成註冊。</p>
                                         </li>
                                         <li>
-                                            <p>服務台出示桃園市民卡LINE官方帳號「註冊/登錄」頁面，即可掃描現場 QRCODE 兌換禮券100元（限量300份，送完為止；消費滿千元即可折抵）。</p>
+                                            <p>服務台出示桃園市民卡LINE官方帳號「註冊/登錄」頁面，即可掃描現場 QRCODE 兌換牛乳石鹼紅盒肥皂（105顆）或玉米材質環保碗（40份），數量有限，送完為止。</p>
                                         </li>
                                     </ul>
                                     <p class="text-remark">※ 兌換按鈕請交由工作人員進行點選，請勿自行操作，以免喪失權益。</p>
@@ -174,7 +174,7 @@
                                                     target="_blank">桃園市民卡LINE官方帳號</a>完成註冊。</p>
                                         </li>
                                         <li>
-                                            <p>服務台出示桃園市民卡LINE官方帳號「註冊/登錄」頁面，即可掃描現場 QRCODE 兌換禮券100元（限量300份，送完為止；消費滿千元即可折抵）。</p>
+                                            <p>服務台出示桃園市民卡LINE官方帳號「註冊/登錄」頁面，即可掃描現場 QRCODE 兌換牛乳石鹼紅盒肥皂（105顆）或玉米材質環保碗（40份），數量有限，送完為止。</p>
                                         </li>
                                     </ul>
                                     <p class="text-remark">※ 兌換按鈕請交由工作人員進行點選，請勿自行操作，以免喪失權益。</p>
