--- a/iiot/taoyuang1000/join-tycg/register.html
+++ b/iiot/taoyuang1000/join-tycg/register.html
@@ -7,7 +7,8 @@
         <meta name='keywords' content=""/>
         <meta name="MobileOptimized" content="width">
         <meta name="HandheldFriendly" content="true">
-        <meta name="viewport" content="width=device-width, initial-scale=1">
+        <!-- <meta name="viewport" content="width=device-width, initial-scale=1"> -->
+        <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0" />
         <meta property="og:type" content="website"/>
         <link rel="stylesheet" href="css/style.css">
     </script>
