加入桃園市民卡 - 新增label標題

--- a/iiot/taoyuang1000/join-tycg/change-pw-dark.html
+++ b/iiot/taoyuang1000/join-tycg/change-pw-dark.html
@@ -22,15 +22,17 @@
                 <form class="edit-userinfo"> 
                     <fieldset class="field">
                         <div class="bg-field for-phone clearfix">
+                            <label for=""><p class="label-title">手機號碼</p></label>
                             <div class="r-input">
-                                <input type="text" id="" placeholder="手機號碼" required="required">
+                                <input type="text" id="" placeholder="請輸入手機號碼" required="required">
                             </div>
                         </div>
                     </fieldset>
                     <fieldset class="field">
                         <div class="bg-field for-verify clearfix">
+                            <label for=""><p class="label-title">驗證碼</p></label>
                             <div class="r-input">
-                                <input type="text" id="" placeholder="驗證碼" required="required">
+                                <input type="text" id="" placeholder="請輸入驗證碼" required="required">
                                 <button class="btn-default">發送驗證碼</button>
                             </div>
                         </div>
@@ -39,15 +41,17 @@
                     <br>
                     <fieldset class="field">
                         <div class="bg-field for-verify clearfix">
+                            <label for=""><p class="label-title">密碼</p></label>
                             <div class="r-input">
-                                <input type="text" id="" placeholder="密碼" required="required">
+                                <input type="text" id="" placeholder="請輸入密碼" required="required">
                             </div>
                         </div>
                     </fieldset>
                     <fieldset class="field">
                         <div class="bg-field for-verify clearfix">
+                            <label for=""><p class="label-title">確認密碼</p></label>
                             <div class="r-input">
-                                <input type="text" id="" placeholder="確認密碼" required="required">
+                                <input type="text" id="" placeholder="請再次輸入密碼" required="required">
                             </div>
                         </div>
                     </fieldset>
