--- a/iiot/taoyuang1000/join-tycg/index-dark.html
+++ b/iiot/taoyuang1000/join-tycg/index-dark.html
@@ -20,15 +20,17 @@
                 <form class="edit-userinfo"> 
                     <fieldset class="field">
                         <div class="bg-field for-phone clearfix">
+                            <label for=""><p class="label-title">手機號碼</p></label>
                             <div class="r-input">
-                                <input type="text" id="" placeholder="手機號碼" required="required">
+                                <input type="text" id="" placeholder="請輸入手機號碼" required="required">
                             </div>
                         </div>
                     </fieldset>
                     <fieldset class="field">
                         <div class="bg-field for-verify clearfix">
+                            <label for=""><p class="label-title">密碼</p></label>
                             <div class="r-input">
-                                <input type="text" id="" placeholder="密碼" required="required">
+                                <input type="text" id="" placeholder="請輸入密碼" required="required">
                             </div>
                         </div>
                     </fieldset>
