--- a/iiot/taoyuang1000/join-tycg/popup2.html
+++ b/iiot/taoyuang1000/join-tycg/popup2.html
@@ -37,35 +37,42 @@
                 <form class="edit-userinfo">
                     <fieldset class="field">
                         <div class="bg-field for-error for-name clearfix">
+                            <label for=""><p class="label-title">姓名</p></label>
                             <div class="r-input">
                                 <p class="text-must">*必填</p>
-                                <input type="text" id="" placeholder="姓名" required="required">
+                                <input type="text" id="" placeholder="請輸入姓名" required="required">
                             </div>
                         </div>
                         <p class="text-error">格式錯誤</p>
                     </fieldset> 
                     <fieldset class="field">
-                        <div class="bg-field for-id clearfix">
+                        <div class="bg-field for-error for-id clearfix">
+                            <label for=""><p class="label-title">身分證字號<br></p></label>
                             <div class="r-input">
                                 <p class="text-must">*必填</p>
-                                <input type="text" id="" placeholder="身分證字號 / 居留證號 / 護照號碼" required="required">
+                                <input type="text" id="" placeholder="" required="required">
                             </div>
                         </div>
+                        <p class="text-note">外國人請輸入居留證號或護照號碼。</p>
+                        <p class="text-error">格式錯誤</p>
                     </fieldset>
                     <fieldset class="field">
                         <div class="bg-field for-map clearfix">
+                            <label for=""><p class="label-title">國家</p></label>
                             <div class="r-input">
-                            <div class="the-select">
-                                <select class="" name="">
-                                    <option value="0">請選擇國家</option>
-                                    <option value="1" selected="">台灣</option>
-                                    <option value="2">義大利</option>
-                                </select>
+                                <div class="the-select">
+                                    <select class="" name="">
+                                        <option value="0">請選擇國家</option>
+                                        <option value="1" selected="">台灣</option>
+                                        <option value="2">義大利</option>
+                                    </select>
+                                </div>
                             </div>
                         </div>
                     </fieldset>
                     <fieldset class="field">
                         <div class="bg-field for-bd clearfix">
+                            <label for=""><p class="label-title">生日</p></label>
                             <div class="r-input">
                                 <input id="birthday" type="date" placeholder="生日">
                             </div>
@@ -73,49 +80,55 @@
                     </fieldset>
                     <fieldset class="field">
                         <div class="bg-field for-mail for-disabled clearfix">
+                            <label for=""><p class="label-title">信箱</p></label>
                             <div class="r-input">
-                                <input type="text" id="" placeholder="信箱" required="required" value="eikiy@gmail.com" disabled>
+                                <input type="text" id="" placeholder="請輸入信箱" required="required" value="eikiy@gmail.com" disabled>
                             </div>
                         </div>
                     </fieldset>
                     <br>
                     <fieldset class="field">
                         <div class="bg-field for-phone clearfix">
+                            <label for=""><p class="label-title">手機號碼</p></label>
                             <div class="r-input">
                                 <p class="text-must">*必填</p>
-                                <input type="text" id="" placeholder="手機號碼" required="required">
+                                <input type="text" id="" placeholder="請輸入手機號碼" required="required">
                             </div>
                         </div>
                     </fieldset>
                     <fieldset class="field">
                         <div class="bg-field for-verify clearfix">
+                            <label for=""><p class="label-title">驗證碼</p></label>
                             <div class="r-input">
-                                <input type="text" id="" placeholder="驗證碼" required="required">
+                                <input type="text" id="" placeholder="請輸入驗證碼" required="required">
                                 <button class="btn-default">發送驗證碼</button>
                             </div>
                         </div>
                     </fieldset>
                     <fieldset class="field">
                         <div class="bg-field for-verify clearfix">
+                            <label for=""><p class="label-title">密碼</p></label>
                             <div class="r-input">
                                 <p class="text-must">*必填</p>
-                                <input type="text" id="" placeholder="密碼" required="required">
+                                <input type="text" id="" placeholder="請輸入密碼" required="required">
                             </div>
                         </div>
                     </fieldset>
                     <fieldset class="field">
                         <div class="bg-field for-verify clearfix">
+                            <label for=""><p class="label-title">確認密碼</p></label>
                             <div class="r-input">
                                 <p class="text-must">*必填</p>
-                                <input type="text" id="" placeholder="確認" required="required">
+                                <input type="text" id="" placeholder="請再次輸入密碼" required="required">
                             </div>
                         </div>
                     </fieldset>
                     <br>
                     <fieldset class="field">
                         <div class="bg-field for-recommend clearfix">
+                            <label for=""><p class="label-title">推薦碼</p></label>
                             <div class="r-input">
-                                <input type="text" id="" placeholder="推薦碼" required="required">
+                                <input type="text" id="" placeholder="請輸入推薦碼" required="required">
                             </div>
                         </div>
                     </fieldset>
