女王節活動頁 - 01更新已兌完 + 首頁上04連結

--- a/iiot/taoyuang1000/queen/date-01.html
+++ b/iiot/taoyuang1000/queen/date-01.html
@@ -123,6 +123,9 @@
                             </tr>
                             <tr>
                                 <td class="info">
+                                    <div class="finish">
+                                        <img src="images/img-finish.png" alt="已兌完">
+                                    </div>
                                     <ul class="list">
                                         <li>
                                             <p>於<a href="https://liff.line.me/1645278921-kWRPP32q/?accountId=497jygbl" target="_blank">桃園市民卡LINE官方帳號</a>完成註冊。</p>
@@ -157,6 +160,9 @@
                             </tr>
                             <tr>
                                 <td class="info">
+                                    <div class="finish">
+                                        <img src="images/img-finish.png" alt="已兌完">
+                                    </div>
                                     <ul class="list">
                                         <li>
                                             <p>於<a href="https://liff.line.me/1645278921-kWRPP32q/?accountId=497jygbl"
