--- a/iiot/taoyuang1000/queen/index.html
+++ b/iiot/taoyuang1000/queen/index.html
@@ -190,10 +190,10 @@
                                 <p>Global Mall 環球購物中心 A8</p>
                             </li>
                             <li>
-                                <a class="store-photo" target="_blank">
+                                <a class="store-photo" href="date-04.html" target="_blank">
                                     <img src="images/img_store_04.png" alt="遠東百貨 桃園店">
                                 </a>
-                                <p>comming soon...</p>
+                                <p>遠東百貨 桃園店</p>
                             </li>
                             <li>
                                 <a class="store-photo" target="_blank">
