女王節註冊登入頁 - 變更活動登入BN & 內容調整
1.banner 更新(4.18-5.4更新為4.18-6.5)
2.活動內容調整

--- a/iiot/taoyuang1000/register/index-queen-done.html
+++ b/iiot/taoyuang1000/register/index-queen-done.html
@@ -17,24 +17,46 @@
         <main class="landing style-queen">
             <section class="contents-box">
                 <div class="img">
-                    <img src="images/img-title-qreen.png" title="卡好女王節 消費滿千送百" width="100%">
+                    <img src="images/img-title-qreen-0506.png" title="卡好女王節 消費滿千送百" width="100%">
                 </div>
                 <h1 class="maintitle">
                     滿千折百活動登錄
                 </h1>
-                <h3 class="subtitle">
+                <!-- 名額額滿顯示 -->
+                <h3 class="subtitle text_c_k">
+                    您好，您登錄的支付工具回饋名額已額滿，更多精彩活動請洽<a href="https://taoyuan1000.tycg.gov.tw/" target="_blank">活動網頁</a>。
+                </h3>
+                <!-- 名額額滿顯示 END -->
+
+                <!-- 登錄成功顯示 -->
+                <h3 class="subtitle text_c_k">
+                    恭喜您成功登錄『三大支付滿千送百』
+                </h3>
+                <div class="top-notes">
+                    <p>即日起至6月5日前，可使用您登錄的「桃園市民卡」所隨附的支付功能（悠遊卡、一卡通MONEY、第一銀行信用卡）進行一般消費滿千元，支付業者將於七月底前提供百元回饋金。<br>
+                    <br>三大支付業者所認列<span>一般消費</span>範圍限制，請至以下各支付業者官網查詢：<br>
+                    </p>
+                    <ul class="go-link clearfix">
+                        <li><a href="https://www.easycard.com.tw/use-range">悠遊卡</a></li>
+                        <li><a href="https://www.i-pass.com.tw/Page/AboutAccount">一卡通MONEY</a></li>
+                        <li><a href="https://card.firstbank.com.tw/sites/card/CardFaq">第一銀行信用卡</a></li>
+                    </ul>
+                </div>
+                <p class="text-info">持續關注官方Line帳號，掌握活動最新訊息。</p>
+                <a class="btn-style" href="https://taoyuan1000.tycg.gov.tw/" target="_blank">活動詳情請洽官網</a>
+                <!-- 登錄成功顯示 END -->
+
+                <!-- <h3 class="subtitle">
                     <span>您已登陸活動</span>
                     一卡通聯名卡<br>
                     /JA80T7Q
-                </h3>
+                </h3> -->
                 <!-- <p class="text-info">恭喜您獲得紅包 XXX元<br>
                     <br>
                     請於2022.12.31前開啟下方兌換券網址並輸入（密碼XXXX）至全家店鋪兌換全家購物金XXX元。<br>
                     <a class="btn-style btn-green" href="https://fami.life/s/4ajkng" target="_blank">得獎查詢</a>
-                </p>
-                <p class="text-info">持續關注官方Line帳號，掌握活動最新訊息。</p>
-                <a class="btn-style" href="#">活動詳情請洽官網</a>
-                <button class="btn-style btn-out">登出</button> -->
+                </p> -->
+                <!-- <button class="btn-style btn-out">登出</button> -->
             </section>
         </main>
         <footer class="footer">
