--- a/iiot/taoyuang1000/register/index-queen-keyin.html
+++ b/iiot/taoyuang1000/register/index-queen-keyin.html
@@ -18,27 +18,31 @@
         <main class="landing style-queen">
             <section class="contents-box">
                 <div class="img">
-                    <img src="images/img-title-qreen.png" title="卡好女王節 消費滿千送百" width="100%">
+                    <img src="images/img-title-qreen-0506.png" title="卡好女王節 消費滿千送百" width="100%">
                 </div>
                 <h1 class="maintitle">
                     【三大支付 滿千送百】報名登記 
                 </h1>
                 <div class="top-notes mag-top">
+                    <h4>活動期間</h4>
+                    <p>111年4月18日（一）至6月5日（日）23:59止，逾時恕不受理。</p>
+                    <br>
                     <h4>活動簡介</h4>
-                    <p>歡慶母親節，桃園市民卡聯合悠遊卡、一卡通、第一銀行，推出回饋總價值高達720萬的「消費滿千送百」超值活動，4/18－5/4 至市民卡官方LINE註冊、登錄，即有機會抽中滿千送百回饋名額（共計72,000名）！</p>
+                    <p>回饋名額不用抽，4/18－6/5至市民卡官方LINE註冊、登錄，即可登記滿千送百回饋名額（共計72,000名，先搶先贏）。百貨接力送好禮，6/5前至指定百貨出示市民卡官方LINE，兌換品牌折扣或來店禮，憑消費2,000元發票，再送200元百貨禮券！</p>
                     <br>
                     <h4>活動步驟</h4>
                     <ul class="nb-list">
-                        <li>於「桃園市民卡」官方LINE帳號完成註冊動作。</li>
-                        <li>4/18（一）至5/4（三）23:59，於本頁面登錄您所申辦的桃園市民卡搭載支付工具。</li>
-                        <li>5月初公告回饋名單，得獎者於公告日至6/5（日）前使用您登錄的支付工具（悠遊卡、一卡通MONEY、第一銀行信用卡），消費滿千即可於消費次月獲得百元回饋金。</li>
+                        <li>於「桃園市民卡」官方LINE帳號完成「註冊/登入」動作。</li>
+                        <li>6月5日（三）前於本頁面登記您所申辦的桃園市民卡支付工具。<br>
+                            <span style="color: #c43b35;">※ 若您所選的支付工具名額截止，將無法成功登記。</span></li>
+                        <li>6月5日（三）前使用桃園市民卡指定支付工具（悠遊卡、一卡通MONEY、第一銀行）進行消費，消費滿千元即會於七月底前獲得百元回饋金。</li>
                     </ul>
                     <br>
                     <h4>注意事項</h4>
                     <ul class="nb-list">
-                        <li>「回饋名單公告」及「支付業者消費限制」等相關消息，請至<a href="https://taoyuan1000.tycg.gov.tw/" target="_blank">活動網頁</a>查看詳請。</li>
-                        <li>如需洽詢活動事宜，請將問題及相關截圖寄送至<a href="mailto:tycc@mail.tycg.gov.tw">客服信箱</a>，或於上班時間（平日8:00-17:00）撥打客服專線03-3322107 由專人為您服務。</li>
-                        <li>卡務問題請撥打客服專線：悠遊卡（02-412-8880）、一卡通（07-791-2000）、第一銀行（02-2173-2999）。</li>
+                        <li>支付業者消費限制等相關訊息，請至<a href="https://taoyuan1000.tycg.gov.tw/" target="_blank">活動網頁</a>查看詳情。
+                        卡務問題請撥打客服專線：悠遊卡（02-412-880）、一卡通（07-791-2000）、第一銀行（02-2173-2999）。</li>
+                        <li>儲存失敗或需洽詢活動事宜，請將問題及截圖寄送至<a href="mailto:tycc@mail.tycg.gov.tw">客服信箱</a>，或於平日上班時間（8:00-17:00）撥打客服專線03-3322107由專人為您服務。</li>
                     </ul>
                 </div>
                 <form class="edit-userinfo">
