--- a/iiot/taoyuang1000/register/index-queen-popup.html
+++ b/iiot/taoyuang1000/register/index-queen-popup.html
@@ -34,7 +34,7 @@
         <main class="landing style-queen">
             <section class="contents-box">
                 <div class="img">
-                    <img src="images/img-title-qreen.png" title="卡好女王節 消費滿千送百" width="100%">
+                    <img src="images/img-title-qreen-0506.png" title="卡好女王節 消費滿千送百" width="100%">
                 </div>
                 <h1 class="maintitle">
                     註冊/登入
