--- a/iiot/taoyuang1000/register/index-queen-privacy.html
+++ b/iiot/taoyuang1000/register/index-queen-privacy.html
@@ -17,7 +17,7 @@
         <main class="landing style-queen">
             <section class="contents-box privacy-content">
                 <div class="img">
-                    <img src="images/img-title-qreen.png" title="卡好女王節 消費滿千送百" width="100%">
+                    <img src="images/img-title-qreen-0506.png" title="卡好女王節 消費滿千送百" width="100%">
                 </div>
                 <h1 class="subtitle">隱私權及安全政策</h1>
                 <h3>關於個人資料保護，請參閱以下「數位桃園1000+市民卡振興加碼」的隱私權聲明：
