--- a/iiot/taoyuang1000/register/index-queen.html
+++ b/iiot/taoyuang1000/register/index-queen.html
@@ -18,7 +18,7 @@
         <main class="landing style-queen">
             <section class="contents-box">
                 <div class="img">
-                    <img src="images/img-title-qreen.png" title="卡好女王節 消費滿千送百" width="100%">
+                    <img src="images/img-title-qreen-0506.png" title="卡好女王節 消費滿千送百" width="100%">
                 </div>
                 <div class="top-notes">
                     <h4>【三大支付，滿千送百】報名登記</h4>
